display: Add option to hide the template when list is empty

--- a/5.0/display/src/Styles.xml.handlebars
+++ b/5.0/display/src/Styles.xml.handlebars
@@ -58,6 +58,15 @@
       <text key="1">Ja</text>
     </content_class>
   </field>
+  <field key="empty">
+    <names>
+      <name>Leere Liste</name>
+    </names>
+      <content_class type="TextChoose">
+      <text key="">Leer anzeigen</text>
+      <text key="hide">Ausblenden</text>
+    </content_class>
+  </field>
   <field key="highlightcat">
     <names>
       <name>Termin Kategorie</name>
