printer: Add appoinent mode options for switching between id and number

--- a/5.0/printer/Styles.xml.handlebars
+++ b/5.0/printer/Styles.xml.handlebars
@@ -204,13 +204,21 @@
   <content_class type="TextChoose">
     <!-- flags
       1: qr-code
-      2: id
+      2: enter code
       4: forgot
+      16: qr-code with number
+      32: enter code with id
     -->
-    <text key="1">QR-Code</text>
-    <text key="5">QR-Code und "QR-Code vergessen"</text>
-    <text key="2">Terminnummer</text>
-    <text key="3">QR-Code und Terminnummer</text>
+    <text key="1">QR-Code (Termin-Id)</text>
+    <text key="17">QR-Code (Terminnummer)</text>
+    <text key="5">QR-Code (Termin-Id) und "QR-Code vergessen"</text>
+    <text key="21">QR-Code (Termin-Id) und QR-Code vergessen</text>
+    <text key="2">Code eingeben (Terminnummer)</text>
+    <text key="34">Code eingeben (Termin-Id)</text>
+    <text key="3">QR-Code (Termin-Id) und Code eingeben (Terminnummer)</text>
+    <text key="35">QR-Code (Termin-Id) und Code eingeben (Termin-Id)</text>
+    <text key="51">QR-Code (Terminnummer) und Code eingeben (Termin-Id)</text>
+    <text key="19">QR-Code (Terminnummer) und Code eingeben (Terminnummer)</text>
   </content_class>
 </field>
 <field key="fgq">
