printer: Make aei an common field, change text to "Infofeld"

--- a/5.0/printer/Styles.xml.handlebars
+++ b/5.0/printer/Styles.xml.handlebars
@@ -78,6 +78,12 @@
     <text key="d">unten</text>
   </content_class>
 </field>
+<field key="aei">
+  <names>
+    <name>Infotext</name>
+  </names>
+  <content_class type="TextFree" />
+</field>
 <field key="tracking_id">
   <names>
     <name>Tracking-ID</name>
@@ -218,12 +224,6 @@
     <name>Kategorie "Vergessen"</name>
   </names>
   <content_class type="VocatisCategories"/>
-</field>
-<field key="aei">
-  <names>
-    <name>Terminfehler Info</name>
-  </names>
-  <content_class type="TextFree" />
 </field>
 <field key="at">
   <names>
